--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -242,9 +242,7 @@ nav.primary-navigation {
   height: 5rem;
   background-color: #000;
   width: 100%;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  align-content: space-evenly;
+  display: flex;
  }
 .info-footer .cooperate{
   margin: auto 0;
@@ -272,7 +270,13 @@ nav.primary-navigation {
 
 
 @media only screen and (max-width: 820px) {
-
+header{
+  display: none;
+}
+.second-section {
+  padding: 0%;
+  width: 100%;
+}
   .search .input-search{
     /* position: absolute; */
     width: 80%;
@@ -282,15 +286,39 @@ nav.primary-navigation {
   }
   #iconsearch{
     position: absolute;
-    top: 72.5%;
-    left: 80%;
+    top: 71.5%;
+    border-radius: 50%;
+    left: 78%;
   }
   .firstrow{
     display: block;
+    height: 25rem;
+    width: 100%;
   }
   .firstrow .left, .firstrow .right , .firstrow .left-img , .firstrow .right-img{
     display: block;
     width: 100%;
   }
+  .footer{
+    display: block;
+  }
+  .info-footer .logo{
+    display: none;
+  }
+  .info-footer .cooperate,.info-footer .social{
+    width: 100%;
+  }
+  footer .info-footer {
+    width: 100%;
+    text-align: center;
+    display: block;
+    margin-top: 98.5rem;
+    border: none;
+
+  }
+  footer .info-footer .social{
+    margin: 11px 15%;
+  }
+  
 
 }
