--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,6 +1,10 @@
 *{
     margin: 0;
     padding: 0;
+    
+}
+body{
+  font-family: 'Ubuntu', sans-serif;
 }
 #mainbanner{
     background-image: url("../images/house.png");
