--- a/Assets/css/Houses.css
+++ b/Assets/css/Houses.css
@@ -1,6 +1,4 @@
-:root {
-    --primary2:#007a70 ;
-}
+
 
 *{
     margin: 0;
@@ -79,6 +77,9 @@ a {
 .filterIcon{
     display: none;
 }
+.closeIcon{
+    display: none;
+}
 @media only screen and (max-width: 820px){
     .nav-home{
         background-color: #f2f2f2;
@@ -104,6 +105,7 @@ a {
         flex-direction: column;
     }
     .filter .inputs{
+        margin: 2%;
         width: 96%;
         padding: 5px 0;
     }
@@ -111,5 +113,19 @@ a {
         width: calc(96%);
         padding: 10px;
         margin: 2%;
+    }
+    .closeIcon{
+        display: block;
+        /* float: right; */ 
+        position: relative; 
+        right: -87%;
+        top: 10px;
+        color: #929292;
+        border: gray 1px solid;
+        margin: 12px;
+        width: 25px;height: 25px;
+        border-radius: 50%;
+        text-align: center;
+        cursor: pointer;
     }
 }
