--- a/MarocRentL/public/Assets/css/style.css
+++ b/MarocRentL/public/Assets/css/style.css
@@ -20,7 +20,7 @@ body{
  z-index: 1;
  opacity: 0.8;
 }
-#navbar{
+/* #navbar{
     top: 0;
     left: 30%;
     position: absolute;
@@ -38,7 +38,7 @@ header{
     width: 100%; 
     height: 60px;
     z-index: 2;
-}
+} */
 
 nav.primary-navigation {
     margin: 0 auto;
